--- a/main_app/templates/layout.html
+++ b/main_app/templates/layout.html
@@ -1,17 +1,29 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
-    <title>Document</title>
-</head>
+    <head>
+        <meta charset="UTF-8">
+        <meta content="width=device-width, initial-scale=1.0" name="viewport">
+        <meta content="ie=edge" http-equiv="X-UA-Compatible">
+        <script src="https://kit.fontawesome.com/632585e591.js"></script>
+        <link rel="stylesheet" href="{% static 'css/style.css' %}">
+        <title>{{ title }}</title>
+    </head>
+        <nav>
+            <a href="/">Home</a>
+            <a href="{% url 'about'%}">About</a>
+            <a href="{% url 'blog'%}">Blog</a>
+        </nav>
+    <main>
+    {% block content %}{% endblock content %}
+    </main>
+    <footer>
+        <p>All Rights Reserved, &copy; {{ year }}</p>
+    </footer>
+    <body>
 
-<body>
-
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.bundle.min.js"></script>
-</body>
+        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.bundle.min.js"></script>
+    </body>
 
 </html>
