--- a/main_app/static/css/style.css
+++ b/main_app/static/css/style.css
@@ -230,4 +230,13 @@ nav {
   font-family: "Inter", sans-serif;
 }
 
+/*------------------------------------*\
+    # Footer
+\*------------------------------------*/
+footer {
+  position: fixed;
+  bottom: 0;
+  left: 0;
+}
+
 /*# sourceMappingURL=style.css.map */
