--- a/main_app/static/scss/typography.scss
+++ b/main_app/static/scss/typography.scss
@@ -7,7 +7,7 @@ $inter: 'Inter', sans-serif;
 $base-font-size: 16px;
 
 // Paragraph Styles
-$paragraph-color      : $primary;
+$paragraph-color      : $secondary;
 $paragraph-size       : rem(17px);
 $paragraph-line-height: 1.5em;
 $paragraph-margin     : 20px;
