--- a/main_app/templates/layout.html
+++ b/main_app/templates/layout.html
@@ -12,21 +12,23 @@
         <title>{{ title }}</title>
     </head>
     <nav>
-        <a href="/">Home</a>
-        <a href="{% url 'about' %}">About</a>
-        <a href="{% url 'blog' %}">Blog</a>
+        <section>
+            <a href="/">Home</a>
+            <a href="{% url 'about' %}">About</a>
+            <a href="{% url 'blog' %}">Blog</a>
+
+        </section>
     </nav>
     <main>
-        <h1>cool</h1>
         <a class="toggle-nav" href="#">
             Menu
         </a>
         {% block content %}{% endblock content %}
+        <footer>
+            <p>All Rights Reserved, &copy;
+                {{ year }}</p>
+        </footer>
     </main>
-    <footer>
-        <p>All Rights Reserved, &copy;
-            {{ year }}</p>
-    </footer>
     <body>
         <script src="{% static 'js/menu.js' %}"></script>
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.bundle.min.js"></script>
