--- a/main_app/static/css/style.css
+++ b/main_app/static/css/style.css
@@ -230,11 +230,15 @@ nav {
   height: 100vh;
   font-family: "Inter", sans-serif;
   font-size: 24px;
-  background-color: #fff;
+  background-color: #101010;
   border-right: 3px solid #FAFAFA;
+}
+
+nav section {
   display: flex;
   flex-direction: column;
   justify-content: center;
+  margin-top: 4rem;
 }
 
 nav a {
