Update views, templates, and TODOs. Begin finishinbg all views and templates.

--- a/design_system/templates/design/home_layout.html
+++ b/design_system/templates/design/home_layout.html
@@ -19,7 +19,7 @@
             <div class="navbar-nav-scroll">
                 <ul class="navbar-nav bd-navbar-nav flex-row">
                     <li class="nav-item">
-                        <a class="nav-link{% if title == 'page_titles[0]' %} 'active'{% endif %}" href="{% url 'design' %}">
+                        <a class="nav-link{% if title == 'page_titles[0]' %} 'active'{% endif %}" href="{% url 'cup_home' %}">
                             Home
                         </a>
                     </li>
