--- a/main_app/templates/layout.html
+++ b/main_app/templates/layout.html
@@ -14,9 +14,9 @@
     <nav>
         <section>
             <a href="/">Home</a>
-            <a href="{% url 'about' %}">About</a>
+            <a href="{% url 'main_about' %}">About</a>
             <a href="{% url 'blog' %}">Blog</a>
-            <a href="{% url 'design' %}">Cup</a>
+            <a href="{% url 'cup_home' %}">Cup</a>
 
         </section>
     </nav>
