--- a/design_system/templates/design/layout.html
+++ b/design_system/templates/design/layout.html
@@ -19,7 +19,7 @@
             <div class="navbar-nav-scroll">
                 <ul class="navbar-nav bd-navbar-nav flex-row" id="nav">
                     <li class="nav-item">
-                        <a class="nav-link" href="{% url 'design' %}">
+                        <a class="nav-link" href="{% url 'cup_home' %}">
                             Home
                         </a>
                     </li>
