Add CRUD using class based views for Site, Submission and Post models

--- a/main_app/templates/layout.html
+++ b/main_app/templates/layout.html
@@ -16,6 +16,7 @@
             <a href="/">Home</a>
             <a href="{% url 'main_about' %}">About</a>
             <a href="{% url 'blog' %}">Blog</a>
+            <a href="/">Community</a>
             <a href="{% url 'cup_home' %}">Cup</a>
 
         </section>
