--- a/main_app/templates/home.html
+++ b/main_app/templates/home.html
@@ -1,4 +1,4 @@
-{% extends "./layout.html" %}
+{% extends "layout.html" %}
 {% block content %}
     <img alt="" src="../../../static/img/Colors.jpg">
 {% endblock %}
