--- a/main_app/templates/registration/login.html
+++ b/main_app/templates/registration/login.html
@@ -1,12 +1,13 @@
-{% extends 'base.html' %} 
+{% extends "../layout.html" %}
+
 {% block content %}
 
-<h1>Log In</h1>
-<form method="post" action="{% url 'login' %}">
-  {% csrf_token %}
-  {{ form.as_p }}
-  <input type="submit" class="btn" value="login" />
-  <input type="hidden" name="next" value="{{ next }}" />
-</form>
+    <h1>Log In</h1>
+    <form method="post" action="{% url 'login' %}">
+        {% csrf_token %}
+        {{ form.as_p }}
+        <input class="btn" type="submit" value="login"/>
+        <input type="hidden" name="next" value="{{ next }}"/>
+    </form>
 
 {% endblock %}
