--- a/main_app/templates/registration/signup.html
+++ b/main_app/templates/registration/signup.html
@@ -1,14 +1,17 @@
-{% extends 'base.html' %}
+{% extends "../layout.html" %}
+
 {% block content %}
 
-<h1>Sign Up</h1>
+    <h1>Sign Up</h1>
 
-{% if error_message %}<p class="red-text">{{ error_message }}</p>{% endif %}
+    {% if error_message %}
+        <p class="red-text">{{ error_message }}</p>
+    {% endif %}
 
-<form method="post" action="{% url 'signup' %}">
-  {% csrf_token %}
-  {{ form.as_p }}
-  <input type="submit" class="btn" value="signup">
-</form>
+    <form method="post" action="{% url 'signup' %}">
+        {% csrf_token %}
+        {{ form.as_p }}
+        <input class="btn" type="submit" value="signup">
+    </form>
 
 {% endblock %}
