--- a/static/scss/style.scss
+++ b/static/scss/style.scss
@@ -259,3 +259,36 @@ footer {
     bottom: 0;
     left: 0;
 }
+
+
+
+/*------------------------------*\
+    CUP STYLES
+\*-------------------------------*/
+
+
+
+// SIDEBAR
+.cd-sidebar {
+    order: 0;
+    border-bottom: 1px solid rgba(0, 0, 0, .1);
+}
+
+.cd-menu {
+    position: relative;
+    padding: 1rem 15px;
+    margin-right: -15px;
+    margin-left: -15px;
+    border-bottom: 1px solid rgba(0,0,0,.05);
+}
+
+[type="button"]:not(:disabled), [type="reset"]:not(:disabled), [type="submit"]:not(:disabled), button:not(:disabled) {
+    cursor: pointer;
+}
+
+.cd-links {
+    padding-top: 1rem;
+    padding-bottom: 1rem;
+    margin-right: -15px;
+    margin-left: -15px;
+}
