--- a/main_app/templates/layout.html
+++ b/main_app/templates/layout.html
@@ -17,7 +17,7 @@
             <a href="{% url 'main_about' %}">About</a>
             <a href="{% url 'blog' %}">Blog</a>
             <a href="{% url 'cup_home' %}">Cup</a>
-
+            <a href="{% url '%}"
         </section>
     </nav>
 
