Submission Form Template

--- a/main_app/templates/layout.html
+++ b/main_app/templates/layout.html
@@ -18,7 +18,9 @@
             <a href="{% url 'blog' %}">Blog</a>
             <a href="/">Community</a>
             <a href="{% url 'cup_home' %}">Cup</a>
-            <a href="{% url '%}"
+            <a href="{% url 'submission_create' %}">
+                Submit a site
+            </a>
         </section>
     </nav>
 
