--- a/main_app/templates/main_app/submission_confirm_delete.html
+++ b/main_app/templates/main_app/submission_confirm_delete.html
@@ -1,4 +1,9 @@
 {% extends "../layout.html" %}
 {% block content %}
     <h1>Delete Submission</h1>
+
+    <h4>Are you sure you want to
+        <span class="text-danger">delete</span>
+        <span>{{ object.name }}</span>?
+    </h4>
 {% endblock %}
