Submission View contains file upload

--- a/main_app/templates/main_app/submission_detail.html
+++ b/main_app/templates/main_app/submission_detail.html
@@ -1,4 +1,5 @@
 {% extends "../layout.html" %}
 {% block content %}
     <h1>Submission Detail</h1>
+    <h1>{{ submission.url }}</h1>
 {% endblock %}
