All views complete w/o authorization

--- a/main_app/templates/layout.html
+++ b/main_app/templates/layout.html
@@ -16,7 +16,7 @@
             <a href="/">Home</a>
             <a href="{% url 'main_about' %}">About</a>
             <a href="{% url 'blog' %}">Blog</a>
-            <a href="/">Community</a>
+            <a href="{% url 'submission_index' %}">Community</a>
             <a href="{% url 'cup_home' %}">Cup</a>
             <a href="{% url 'submission_create' %}">
                 Submit a site
