--- a/main_app/templates/sites/detail.html
+++ b/main_app/templates/sites/detail.html
@@ -1,4 +1,21 @@
 {% extends "../layout.html" %}
 {% block content %}
-    <h1>Site Detail</h1>
+    <h1>Site Detail
+    </h1>
+    {% for photo in site.photo_set.all %}
+        <img src="{{photo.url}}">
+        {% empty %}
+        <h1>
+            There are no photos yet
+        </h1>
+        <label for="photos">Upload Photos</label>
+        <form name="photos" action="{% url 'add_site_photo' site.id %}" enctype="multipart/form-data" method="POST">
+            {% csrf_token %}
+            <input multiple name="photo-files" type="file">
+            <br><br>
+            <input class="btn" type="submit" value="Upload Photo">
+        </form>
+    {% endfor %}
+
+
 {% endblock %}
