--- a/main_app/templates/home.html
+++ b/main_app/templates/home.html
@@ -1,4 +1,8 @@
 {% extends "layout.html" %}
 {% block content %}
     <h1>Home</h1>
+    {% for site in sites %}
+        <!-- TODO: GRID FOR IMAGES-->
+
+    {% endfor %}
 {% endblock %}
