--- a/main_app/templates/main_app/site_form.html
+++ b/main_app/templates/main_app/site_form.html
@@ -1,10 +1,11 @@
 {% extends "../layout.html" %}
 {% block content %}
     <h1>Create Site</h1>
-    <form action="post">
+    <form action="" enctype="multipart/form-data" method="POST">
         {% csrf_token %}
         <table>
             {{ form.as_table }}
+
         </table>
         <input type="submit" value="Submit!">
     </form>
