--- a/main_app/templates/main_app/submission_list.html
+++ b/main_app/templates/main_app/submission_list.html
@@ -1,4 +1,8 @@
 {% extends "../layout.html" %}
 {% block content %}
     <h1>Submissions</h1>
+
+    {% for submission in submission_list %}
+        <p>{{ submission.site_name }}</p>
+    {% endfor %}
 {% endblock %}
