Wait for category

--- a/main_app/templates/category/detail.html
+++ b/main_app/templates/category/detail.html
@@ -2,7 +2,7 @@
 {% block content %}
     <h1>Category:
     </h1>
-    {% for site in sites %}
+    {% for sites in sites %}
         <p>{{ site.name }}</p>
     {% endfor %}
 {% endblock %}
