--- a/main_app/templates/layout.html
+++ b/main_app/templates/layout.html
@@ -21,6 +21,7 @@
             <a href="{% url 'submission_create' %}">
                 Submit a site
             </a>
+            <a href="category/1"></a>
         </section>
     </nav>
 
