Update to separate cup styles from main styles

--- a/design_system/templates/design/home.html
+++ b/design_system/templates/design/home.html
@@ -1,2 +1,6 @@
 {% extends "./home_layout.html" %}
-{% block content %}{% endblock %}
+{% block content %}
+    <div class="col-6 mx-auto col-md-6 order md-2">
+        
+    </div>
+{% endblock %}
