--- a/design_system/templates/design/layout.html
+++ b/design_system/templates/design/layout.html
@@ -15,7 +15,12 @@
 
         <!--TODO: add header nav -->
         <header class="navbar navbar-expand navbar-dark flex-column flex-md-row bd-navbar navbar-dark bg-dark">
-            <a class="navbar-brand mr-0 mr-md-2 text-primary" href="/design">C</a>
+            <a class="navbar-brand mr-0 mr-md-2 text-primary" href="/design">
+                <svg fill="none" height="36" viewbox="0 0 52 52" width="52" xmlns="http://www.w3.org/2000/svg">
+                    <rect height="50" rx="5" stroke-width="2" stroke="white" width="50" x="1" y="1"/>
+                    <path d="M38.358 20.3693C37.3636 14.1477 32.4915 10.5114 26.3409 10.5114C18.8125 10.5114 13.2585 16.1506 13.2585 25.4545C13.2585 34.7585 18.7841 40.3977 26.3409 40.3977C32.733 40.3977 37.4062 36.392 38.358 30.6392L33.9261 30.625C33.1733 34.3466 30.0483 36.392 26.3693 36.392C21.3835 36.392 17.6193 32.571 17.6193 25.4545C17.6193 18.3949 21.3693 14.517 26.3835 14.517C30.0909 14.517 33.2017 16.6051 33.9261 20.3693H38.358Z" fill="white"/>
+                </svg>
+            </a>
             <div class="navbar-nav-scroll">
                 <ul class="navbar-nav bd-navbar-nav flex-row" id="nav">
                     <li class="nav-item">
