--- a/design_system/templates/design/home_layout.html
+++ b/design_system/templates/design/home_layout.html
@@ -15,7 +15,7 @@
     <body>
 
         <!--TODO: add header nav -->
-        <header class="navbar navbar-expand navbar-dark flex-column flex-md-row bd-navbar navbar-dark bg-dark">
+        <header class="navbar navbar-expand navbar-dark flex-column flex-md-row bd-navbar navbar-dark bg-cup">
             <a class="navbar-brand mr-0 mr-md-2 text-primary" href="/design">
                 <svg fill="none" height="36" viewbox="0 0 52 52" width="52" xmlns="http://www.w3.org/2000/svg">
                     <rect height="50" rx="5" stroke-width="2" stroke="white" width="50" x="1" y="1"/>
@@ -52,7 +52,7 @@
             </ul>
 
         </header>
-
+        
         <!--TODO: add main content container -->
         <main class="cd-masthead" role="main">
             <div class="container">
