--- a/static/css/cup.css
+++ b/static/css/cup.css
@@ -1,28 +1,47 @@
 /*------------------------------*\
     CUP STYLES
 \*-------------------------------*/
-.cd-sidebar {
-  order: 0;
-  border-bottom: 1px solid rgba(0, 0, 0, 0.1);
+#sidebar {
+  min-width: 250px;
+  max-width: 250px;
+  height: 100vh;
 }
 
-.cd-menu {
-  position: relative;
-  padding: 1rem 15px;
-  margin-right: -15px;
-  margin-left: -15px;
-  border-bottom: 1px solid rgba(0, 0, 0, 0.05);
+#sidebar.active {
+  margin-left: -250px;
 }
 
-[type=button]:not(:disabled), [type=reset]:not(:disabled), [type=submit]:not(:disabled), button:not(:disabled) {
-  cursor: pointer;
+a, a:hover, a:focus {
+  color: inherit;
+  text-decoration: none;
 }
 
-.cd-links {
-  padding-top: 1rem;
-  padding-bottom: 1rem;
-  margin-right: -15px;
-  margin-left: -15px;
+#sidebar .sidebar-header {
+  padding: 20px 0;
+}
+
+#sidebar div.components {
+  padding: 20px 20px;
+}
+
+#sidebar div p {
+  padding: 10px;
+}
+
+#sidebar div ul li a {
+  padding: 10px;
+  font-size: 1.1em;
+  display: block;
+}
+
+div ul a {
+  font-size: 0.9em !important;
+  padding-left: 30px !important;
+}
+
+footer {
+  bottom: 0;
+  left: 0;
 }
 
 .cd-footer {
@@ -40,9 +59,17 @@ svg {
   vertical-align: middle;
 }
 
-@media (min-width: 576px) {
-  .cd-footer {
-    text-align: left;
+.bg-cup {
+  background-color: #101010;
+}
+
+@media (max-width: 768px) {
+  #sidebar {
+    margin-left: -250px;
+  }
+
+  #sidebar.active {
+    margin-left: 0;
   }
 }
 
