--- a/static/scss/cup.scss
+++ b/static/scss/cup.scss
@@ -1,3 +1,5 @@
+
+
 /*------------------------------*\
     CUP STYLES
 \*-------------------------------*/
@@ -5,32 +7,48 @@
 //Header
 
 // SIDEBAR
-.cd-sidebar {
-    order: 0;
-    border-bottom: 1px solid rgba(0, 0, 0, .1);
+#sidebar {
+    min-width: 250px;
+    max-width: 250px;
+    height: 100vh;
 }
 
-.cd-menu {
-    position: relative;
-    padding: 1rem 15px;
-    margin-right: -15px;
-    margin-left: -15px;
-    border-bottom: 1px solid rgba(0,0,0,.05);
+#sidebar.active {
+    margin-left: -250px;
 }
 
-[type="button"]:not(:disabled), [type="reset"]:not(:disabled), [type="submit"]:not(:disabled), button:not(:disabled) {
-    cursor: pointer;
+a, a:hover, a:focus {
+    color: inherit;
+    text-decoration: none;
 }
 
-.cd-links {
-    padding-top: 1rem;
-    padding-bottom: 1rem;
-    margin-right: -15px;
-    margin-left: -15px;
+#sidebar .sidebar-header {
+    padding: 20px 0;
 }
+
+#sidebar div.components {
+    padding: 20px 20px;
+}
+#sidebar div p {
+    padding: 10px;
+}
+#sidebar div ul li a {
+    padding: 10px;
+    font-size: 1.1em;
+    display: block;
+}
+div ul a {
+    font-size: 0.9em !important;
+    padding-left: 30px !important;
+}
+
 
 
 // Footer 
+footer {
+    bottom: 0;
+    left: 0;
+}
 
 .cd-footer {
     font-size: .875rem;
@@ -48,9 +66,17 @@ svg {
     overflow: hidden;
     vertical-align: middle;
 }
+.bg-cup {
+    background-color: #101010;
+}
+
+
 // Media Queries
-@media (min-width: 576px){
-    .cd-footer {
-   text-align: left;
+@media (max-width: 768px) {
+    #sidebar {
+        margin-left: -250px;
+    }
+    #sidebar.active {
+        margin-left: 0;
     }
 }
