--- a/design_system/templates/design/layout.html
+++ b/design_system/templates/design/layout.html
@@ -55,69 +55,65 @@
             </ul>
         </header>
         <!--TODO: add main content container -->
-        <div class="container-fluid">
-            <div
-                class="row flex-xl-nowrap">
-                <!--TODO: add sidbar nav -->
-                <nav id="sidebar">
-                    <div class="components">
-                        <div class="sidebar-header">
-                            <h3>Documentation</h3>
-                        </div>
-                        <div class="active ">
-                            <a aria-expanded="false" class=" cd-toc-link" data-toggle="collapse" href="#gettingStarted">
-                                Getting Started
-                            </a>
-                            <ul class="flex-column collapse nav cd-sidenav" id="gettingStarted">
-                                <li>
-                                    <a href="">Introduction</a>
-                                </li>
-                                <li>
-                                    <a href="">Build Tools</a>
-                                </li>
-                            </ul>
-                        </div>
-                        <div class="">
-                            <a aria-expanded="false" class=" cd-toc-link" data-toggle="collapse" href="#components">Components</a>
+        <div
+            class="wrapper">
+            <!--TODO: add sidbar nav -->
+            <nav id="sidebar">
+                <div class="sidebar-header">
+                    <h3>Bootstrap Sidebar</h3>
+                </div>
 
-                            <ul class="flex-column collapse nav cd-sidenav" id="components">
-                                <li>
-                                    <a href="">Buttons</a>
-                                </li>
-                                <li>
-                                    <a href="">Colors</a>
-                                </li>
-                            </ul>
-                        </div>
-                        <div class="">
-                            <a aria-expanded="false" class=" cd-toc-link" data-toggle="collapse" href="#utilities">Utilities</a>
-                            <ul class="flex-column scollapse nav cd-sidenav" id="utilities">
-                                <li>
-                                    <a href="">Margins</a>
-                                </li>
-                            </ul>
-                        </div>
-                        <div class="">
-                            <a aria-expanded="false" class=" cd-toc-link" data-toggle="collapse" href="#about">About</a>
-                            <ul class="flex-column collapse nav cd-sidenav" id="about">
-                                <li>
-                                    <a href="">Team</a>
-                                </li>
-                            </ul>
-                        </div>
+                <ul class="list-unstyled components">
+                    <p>Dummy Heading</p>
+                    <li class="active">
+                        <a aria-expanded="false" data-toggle="collapse" href="#homeSubmenu">Home</a>
+                        <ul class="collapse list-unstyled" id="homeSubmenu">
+                            <li>
+                                <a href="#">Home 1</a>
+                            </li>
+                            <li>
+                                <a href="#">Home 2</a>
+                            </li>
+                            <li>
+                                <a href="#">Home 3</a>
+                            </li>
+                        </ul>
+                    </li>
+                    <li>
+                        <a href="#">About</a>
+                    </li>
+                    <li>
+                        <a aria-expanded="false" data-toggle="collapse" href="#pageSubmenu">Pages</a>
+                        <ul class="collapse list-unstyled" id="pageSubmenu">
+                            <li>
+                                <a href="#">Page 1</a>
+                            </li>
+                            <li>
+                                <a href="#">Page 2</a>
+                            </li>
+                            <li>
+                                <a href="#">Page 3</a>
+                            </li>
+                        </ul>
+                    </li>
+                    <li>
+                        <a href="#">Portfolio</a>
+                    </li>
+                    <li>
+                        <a href="#">Contact</a>
+                    </li>
+                </ul>
+            </nav>
+            <main id="content" role="main">
+                <nav class="navbar navbar-expand-lg navbar-dark">
+                    <div class="container-fluid">
+                        <button class="btn text-dark" id="sidebarCollapse" type="button">
+                            <i class="fas fa-align-left"></i>
+                        </button>
                     </div>
                 </nav>
-                <main id="content" role="main">
-                    <nav class="navbar navbar-expand-lg navbar-dark">
-                        <div class="container-fluid">
-                            <button class="btn text-dark" id="sidebarCollapse" type="button">
-                                <i class="fas fa-align-left"></i>
-                            </button>
-                        </div>
-                    </nav>
-                    {% block content %}{% endblock %}
-                </main>
-            </div>
+                {% block content %}{% endblock %}
+            </main>
         </div>
         <footer class="cd-footer text-muted">
             <div class="container-fluid p-3 p-md-5">
