--- a/static/css/cup.css
+++ b/static/css/cup.css
@@ -1,42 +1,20 @@
 /*------------------------------*\
     CUP STYLES
 \*-------------------------------*/
+.wrapper {
+  display: flex;
+  width: 100%;
+  align-items: stretch;
+}
+
 #sidebar {
   min-width: 250px;
   max-width: 250px;
-  height: 100vh;
+  min-height: 100vh;
 }
 
 #sidebar.active {
   margin-left: -250px;
-}
-
-a, a:hover, a:focus {
-  color: inherit;
-  text-decoration: none;
-}
-
-#sidebar .sidebar-header {
-  padding: 20px 0;
-}
-
-#sidebar div.components {
-  padding: 20px 20px;
-}
-
-#sidebar div p {
-  padding: 10px;
-}
-
-#sidebar div ul li a {
-  padding: 10px;
-  font-size: 1.1em;
-  display: block;
-}
-
-div ul a {
-  font-size: 0.9em !important;
-  padding-left: 30px !important;
 }
 
 footer {
