Update sidebar header

--- a/static/css/cup.css
+++ b/static/css/cup.css
@@ -17,6 +17,14 @@
   margin-left: -250px;
 }
 
+.sidebar-header h3 {
+  margin: 0;
+}
+
+.sidebar-header {
+  margin-top: 1rem;
+}
+
 footer {
   bottom: 0;
   left: 0;
