--- a/static/scss/cup.scss
+++ b/static/scss/cup.scss
@@ -23,8 +23,13 @@
     margin-left: -250px;
 }
 
+.sidebar-header h3{
+    margin: 0;
+}
 
-
+.sidebar-header {
+    margin-top: 1rem;
+}
 // Footer 
 footer {
     bottom: 0;
