--- a/design_system/templates/design/home_layout.html
+++ b/design_system/templates/design/home_layout.html
@@ -49,7 +49,7 @@
 
         <!--TODO: add main content container -->
         {% block content %}{% endblock %}
-        <script src="{% static 'js/main.js' %}"></script>
+        <script src="{% static 'js/menu.js' %}"></script>
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.bundle.min.js"></script>
     </body>
 
