--- a/static/css/cup.css
+++ b/static/css/cup.css
@@ -2,6 +2,7 @@
     CUP STYLES
 \*-------------------------------*/
 .wrapper {
+  padding-top: 4rem;
   display: flex;
   width: 100%;
   align-items: stretch;
@@ -22,7 +23,8 @@
 }
 
 .sidebar-header {
-  margin-top: 1rem;
+  margin-top: 0.5rem;
+  padding: 58px 20px;
 }
 
 footer {
