--- a/static/scss/cup.scss
+++ b/static/scss/cup.scss
@@ -8,6 +8,7 @@
 
 // SIDEBAR
 .wrapper {
+    padding-top: 4rem;
     display: flex;
     width: 100%;
     align-items: stretch;
@@ -28,8 +29,11 @@
 }
 
 .sidebar-header {
-    margin-top: 1rem;
+    margin-top: .5rem;
+    padding: 58px 20px;
 }
+
+
 // Footer 
 footer {
     bottom: 0;
