--- a/main_app/templates/main_app/site_form.html
+++ b/main_app/templates/main_app/site_form.html
@@ -3,14 +3,13 @@
    <section class="post-single">
        <div class="submit">
            <h6 class="submit-title">Add a Site</h6>
-            <form class="form-group" action="" enctype="multipart/form-data" method="POST">
+            <form class="flexz" action="" enctype="multipart/form-data" method="POST">
                 {% csrf_token %}
                 {% for field in form %}
                 <div class="field">
-                    <h6 for="{{ field.id_for_label}}">{{field.html_name }}</h6>
+                    <label for="{{ field.id_for_label}}">{{field.html_name }}</label>
                     {{ field }}
                 </div>
-                    
                 {% endfor %}
                 <input class="button"
             type="submit" value="Submit">
