--- a/main_app/templates/main_app/submission_form.html
+++ b/main_app/templates/main_app/submission_form.html
@@ -1,10 +1,20 @@
 {% extends "../layout.html" %}
 {% block content %}
-    <h1>Submission Create</h1>
-    <form action="" enctype="multipart/form-data" method="POST">
-        {% csrf_token %}
-        {{ form.as_p }}
-        <input type="submit" value="Submit!">
-    </form>
+    <section class="post-single">
+        <div class="submit">
+            <h6 class="submit-title">Submit a Website</h6>
+            <form class="flexz" action="" enctype="multipart/form-data" method="POST">
+                {% csrf_token %}
+                {% for field in form %}
+                <div class="field">
+                    <label for="{{ field.id_for_label}}">{{field.html_name }}</label>
+                    {{ field }}
+                </div>
+                {% endfor %}
+                <input class="button" type="submit" value="Submit">
+                <input type="hidden" name="submitted" id="submitted" value="true">
+            </form>
+        </div>
+    </section>
 
 {% endblock %}
