--- a/static/css/style.css
+++ b/static/css/style.css
@@ -419,9 +419,13 @@ h6 {
 /*------------------------------------*\
     # Site Create
 \*------------------------------------*/
-.input {
+.submit h6 {
+  margin-bottom: 2rem;
+}
+
+.input, .select-multiple, .select {
   display: block;
-  margin-bottom: 30px;
+  margin: 1rem 0 4rem 0;
   padding: 10px 0;
   font-size: 16px;
   color: #FAFAFA;
@@ -429,7 +433,25 @@ h6 {
   width: 100%;
   background: none;
   border: 0;
+  outline: none;
   border-bottom: 1px solid #484848;
+}
+
+select[multiple]:focus option:checked {
+  background: white linear-gradient(0deg, grey 0%, grey 100%);
+}
+
+select[multiple] option:checked {
+  color: #101010;
+}
+
+.button {
+  border: 0;
+  font-size: 19.2px;
+  font-family: inherit;
+  display: inline-block;
+  padding: 10px 0;
+  cursor: pointer;
   outline: none;
 }
 
