Extend class based views to include ModelForm

--- a/main_app/templates/main_app/submission_form.html
+++ b/main_app/templates/main_app/submission_form.html
@@ -3,7 +3,7 @@
     <section class="post-single">
         <div class="submit">
             <h6 class="submit-title">Submit a Website</h6>
-            <form class="flexz" action="" enctype="multipart/form-data" method="POST">
+            <form  action="" enctype="multipart/form-data" method="POST">
                 {% csrf_token %}
                 {% for field in form %}
                 <div class="field">
