--- a/main_app/templates/layout.html
+++ b/main_app/templates/layout.html
@@ -42,7 +42,7 @@
                 </g>
             </svg>
         </a>
-        <a class="logo">
+        <a href="/" class="logo">
            <img src="{% static 'img/logo.svg' %}" alt="">
             </a>
         
