--- a/main_app/templates/registration/login.html
+++ b/main_app/templates/registration/login.html
@@ -2,12 +2,20 @@
 
 {% block content %}
 
-    <h1>Log In</h1>
-    <form method="post" action="{% url 'login' %}">
-        {% csrf_token %}
-        {{ form.as_p }}
-        <input class="btn" type="submit" value="login"/>
-        <input type="hidden" name="next" value="{{ next }}"/>
-    </form>
-
+<section class="post-single">
+    <div class="submit">
+        <h6 class="submit-title">Log In</h6>
+        <form class="flexz" action="{% url 'login' %}" method="POST"> 
+            {% csrf_token %}
+            {% for field in form %}
+            <div class="field">
+                <label for="{{ field.id_for_label}}">{{field.html_name }}</label>
+                {{ field }}
+            </div>
+            {% endfor %}
+            <input class="button" type="submit" value="Submit">
+            <input type="hidden" name="submitted" id="submitted" value="true">
+        </form>
+    </div>
+</section>
 {% endblock %}
