--- a/main_app/templates/layout.html
+++ b/main_app/templates/layout.html
@@ -15,14 +15,19 @@
     <nav>
         <section>
             <a href="/">Home</a>
-            <a href="{% url 'main_about' %}">About</a>
-            <a href="{% url 'blog' %}">Blog</a>
             <a href="{% url 'submission_index' %}">Community</a>
             <a href="{% url 'cup_home' %}">Cup</a>
+            {% if user.is_authenticated %}
             <a href="{% url 'submission_create' %}">
                 Submit a site
             </a>
-            <a href="category/1"></a>
+            <br>
+            <a href="{% url 'logout' %}">Log Out</a>
+            {% else %}
+            <br>
+            <a href="{% url 'signup' %}">Sign Up</a>
+            <a href="{% url 'login'%}">Log In</a>
+            {% endif %}
         </section>
     </nav>
     <header class="flex">
